(env
 (dev
  (flags (:standard -rectypes -warn-error -A -w -33))
 ))

(library
 (name lib1)
 (modules lib1)
 (preprocess (action
    (run %{project_root}/rewriter.exe %{input-file})))
  (preprocessor_deps (file %{project_root}/rewriter.exe))
  )


(rule
 (targets rewriter.exe)
 (action
  (run mkcamlp5.opt -package
    camlp5,camlp5.pa_o %{deps} pr_dump.cmx
    -o %{targets} -)))



